0.9.14.beta

- set up artd-rakish-find to return the git hash of the installed version when given no arguments.
- added allDependencies() method to Project to retrieve a list of all dependencies
  sorted from the one with the least pre-requisites to the most.
- standard :preBuild task is now :configure
- changed remaing unfixed task lambdas for two arguments for later rake verisons
- added buildBinDir to retrieve build global Bin directory
- removed old INCDIR and replaced references with buildIncludeDir
- added configurationDir to retrieve the location of project's configuration specific cache.
- added GitModule for inclusion in projects for convenient git operations
- Configuration initializer now called in directory of declaring file.
- changed RakishProject#moduleName to projectName
- moduleObjDir is now projectObjDir
- moduleConfiguredObjDir is now configuredObjDir
- added FileSet#update with an optional :exclude option.
- added accessor for currentBuildConfig into CppProject
- thirdPartyPath now burried in hacky WindowsCppTools module, on the way out
     now retrieved from environment variable.

0.9.13.beta

- added second "args" arcument to all action lambdas for strict argument count checking
  in ruby 2.0+

0.9.12.beta

-   Added binary script to return path to auxilliary support files used in ant scripts and other places that are
    contained in this gem.

-   Added call-rake.xml ant script for use in spawning calls to rake from intellij managed, and general,
    ant scripts.

0.9.11.beta

-   Buyers remorse on createArgs it now uses only one named argument :$@
    This makes life a lot simpler and more future proof in case later versions of rake use
    additional named aruments

    examples:

    task :withCreateArgs, :$@=>{ :arg0=>'val0', :arg1=>val1 ...}  do   end
    task :withCreateArgs=>[ :deps ], :$@=>{ :arg0=>'val0', :arg1=>val1 ...}  do   end
    task :withCreateArgs,  [ :commandLineArg, ... ], :$@=>{ :arg0=>'val0', :arg1=>val1 ...}  do   end